Updated 'contact/index.html' via CloudCannon

--- a/contact/index.html
+++ b/contact/index.html
@@ -102,11 +102,11 @@ h3  { text-decoration: underline overline;
 			<label for="message">Message</label>
 			<textarea id="message" name="message"></textarea>
 
-			<input type="hidden" name="_to" value="adjiazief@yahoo.co.id" />
+			
 			<input type="text" name="_gotcha" style="display: none;" />
 
 			<input type="submit" value="Send Message" />
-		</form>
+		<input type="hidden" name="_encrypted_details" value="526d2fd0bb5de6155c97edb1cdd35eec5c42a81d31e23aab1d54027476eb683821" /></form>
 	</div>
 </div>
 
