--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ p.small {
 	</div>
 
 <link rel="stylesheet" href="/css/share-butt.scss" />
-<p>Share kami ya disosmed..Thanks</p>
+<p>Sharing Sosmed:</p>
 <!-- Sharingbutton Facebook -->
 <div class='container'>
 <button id="btn1"><a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fbeningabaditransport.com" target="_blank" rel="noopener" aria-label="">
