Updated 2 files via CloudCannon

--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -14,7 +14,7 @@
 <link rel="canonical" href="https://beningabaditransport.com/sewa-motor/" />
 <meta property="og:url" content="https://beningabaditransport.com/sewa-motor/" />
 <script type="application/ld+json">
-{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://beningabaditransport.com/siteicon.png"}},"@type":"WebPage","headline":"Sewa Motor","url":"https://beningabaditransport.com/sewa-motor/","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum","@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://beningabaditransport.com/siteicon.png"}},"@type":"WebPage","headline":"Sewa Motor","url":"https://beningabaditransport.com/sewa-motor/","description":"Sewa Motor Jogja Murah Mulai 50 Ribu","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 		<link type="application/atom+xml" rel="alternate" href="https://beningabaditransport.com/feed.xml" title="" />
