Updated 2 files via CloudCannon

--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -10,11 +10,11 @@
 <meta property="og:title" content="Rental Mobil" />
 <meta property="og:locale" content="id_ID" />
 <meta name="description" content="Rental Mobil Jogja Murah Mulai 300 Ribu" />
-<meta property="og:description" content="Rental Mobil Joga Murah Mulai 300 Ribu" />
+<meta property="og:description" content="Rental Mobil Jogja Murah Mulai 300 Ribu" />
 <link rel="canonical" href="https://beningabaditransport.com/rental-mobil/" />
 <meta property="og:url" content="https://beningabaditransport.com/rental-mobil/" />
 <script type="application/ld+json">
-{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://beningabaditransport.com/siteicon.png"}},"@type":"WebPage","headline":"Rental Mobil","url":"https://beningabaditransport.com/rental-mobil/","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum","@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://beningabaditransport.com/siteicon.png"}},"@type":"WebPage","headline":"Rental Mobil","url":"https://beningabaditransport.com/rental-mobil/","description":"Rental Mobil Jogja Murah Mulai 300 Ribu","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 		<link type="application/atom+xml" rel="alternate" href="https://beningabaditransport.com/feed.xml" title="" />
