--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -14,7 +14,7 @@
 <link rel="canonical" href="https://beningabaditransport.com/penginapan/" />
 <meta property="og:url" content="https://beningabaditransport.com/penginapan/" />
 <script type="application/ld+json">
-{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://beningabaditransport.com/siteicon.png"}},"@type":"WebPage","headline":"Penginapan","url":"https://beningabaditransport.com/penginapan/","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum","@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://beningabaditransport.com/siteicon.png"}},"@type":"WebPage","headline":"Penginapan","url":"https://beningabaditransport.com/penginapan/","description":"Penginapan Murah Jogja Mulai 150 Ribu","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 		<link type="application/atom+xml" rel="alternate" href="https://beningabaditransport.com/feed.xml" title="" />
