--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -88,7 +88,7 @@ h3  { text-decoration: underline overline;
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		</div>
-<p>Share kami ya disosmed..Thanks</p>
+<p>Sharing SosMed:</p>
 <!-- Sharingbutton Facebook -->
 <div class='container'>
 <button id="btn1"><a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fbeningabaditransport.com" target="_blank" rel="noopener" aria-label="">
