--- a/contact/index.html
+++ b/contact/index.html
@@ -92,7 +92,7 @@ h3  { text-decoration: underline overline;
 	</div>
 
 	<div class="column">
-		<form method="post" action="/contact-success/index.html">
+		<form method="post" action="https://formspree.io/mlejryqz">
 			<label for="email_address">Email Address</label>
 			<input id="email_address" type="text" name="email" />
 
