--- a/index.html
+++ b/index.html
@@ -407,5 +407,6 @@ p.small {
 				</p>
 			</div>
 		</footer>
-	</body>
+	<div class="powr-map" id="9038e4e8_1578596374"></div><script src="https://www.powr.io/powr.js?platform=cloudflare"></script>
+ </body>
 </html>
