--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@ p.small {
 				</p>
 			</div>
 		</footer>
-	<div class="powr-map" id="9038e4e8_1578596374"></div><script src="https://www.powr.io/powr.js?platform=cloudflare"></script>
- </body>
+<div class="powr-map" id="9038e4e8_1578596374"></div><script src="https://www.powr.io/powr.js?platform=cloudflare"></script>
+<div class="powr-comments" id="3e232937_1576542284"></div><script src="https://www.powr.io/powr.js?platform=cloudflare"></script>
+</body>
 </html>
