--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ p.small {
 </style>
 </head>
 <p class="editable" data-cms-source="/index.html" data-cms-index="0">
-	</p><h1><style="font-size:21px"><a href="/sewa-motor">Sewa Motor mulai 50 Ribu</a> | <a href="/rental-mobil">Rental Mobil Yogyakarta start 300 Ribu</a> | <a href="/penginapan">Penginapan termurah 150 Ribu</style></a></h1><h2>Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</h2><p></p>
+	</p><h1><p style="font-size:21px"><a href="/sewa-motor">Sewa Motor mulai 50 Ribu</a> | <a href="/rental-mobil">Rental Mobil Yogyakarta start 300 Ribu</a> | <a href="/penginapan">Penginapan termurah 150 Ribu</a></p></h1><h2>Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</h2>
 <div class="boxed">
 <p class="small">Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta, dengan lokasi yang strategis berdekatan dengan kampus seperti UGM dan UNY. Sewa motor, rental mobil, penginapan dan guest house adalah layanan utama kami. Di awal tahun 2020 ini kami memulai dengan tambahan unit motor baru seperti Honda Genio dan Honda Beat Street. Kami sewakan dengan harga yang sangat terjangkau untuk kalangan mahasiswa jogja dan customer umum. Semoga ke depan kami bisa memberikan pelayanan yang lebih baik kepada pelanggan pelanggan setia Bening Abadi Transport.</p><hr />
 		<p><img alt="logo bening" width="250" height="100" src="/uploads/logo-bening.png" /></p>
