--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ p.small {
 			</div>
 		</footer>
 <p>Peta Lokasi Bening Abadi Transport!</p>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.1166853561253!2d110.38013141424142!3d-7.777450494394927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a59c915b63759%3A0x464727210bf21197!2sBening%20Abadi%20Transport!5e0!3m2!1sen!2sid!4v1578631010268!5m2!1sen!2sid" width="420" height="320" frameborder="2" allowfullscreen=""></iframe>
+<p align="center"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.1166853561253!2d110.38013141424142!3d-7.777450494394927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a59c915b63759%3A0x464727210bf21197!2sBening%20Abadi%20Transport!5e0!3m2!1sen!2sid!4v1578631010268!5m2!1sen!2sid" width="420" height="320" frameborder="2" allowfullscreen=""></iframe></p>
 <div class="powr-comments" id="3e232937_1576542284"></div><script src="https://www.powr.io/powr.js?platform=cloudflare"></script>
 </body>
 </html>
