--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 			</script>
 			<script async src='https://www.google-analytics.com/analytics.js'></script>
 			<meta property="og:locale" content="id_ID" />
-		
+	<style>
+		h3 {
+  text-align: centre;
+}
+		</style>
 	</head>
 	<body>
 		<nav>
