--- a/index.html
+++ b/index.html
@@ -35,11 +35,6 @@
 			</script>
 			<script async src='https://www.google-analytics.com/analytics.js'></script>
 			<meta property="og:locale" content="id_ID" />
-	<style>
-		h3 {
-  text-align: centre;
-}
-		</style>
 	</head>
 	<body>
 		<nav>
@@ -66,7 +61,7 @@
 				<html lang="id">
 <head>
 <style>
-h3  { text-decoration: underline overline;
+h3  { text-decoration: underline overline; text-align: centre;
     }
 </style>
 
