--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ p.small {
 		</blockquote>
 	
 		<blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/rental-mobil/">Sewa mobil lepas kunci mulai 300 ribu!!</a></p><p><img alt="mobil" src="/uploads/mobil-icon1.jpg" width="360" height="239" /></p><p></p>
+			<p class="testimonial-message"><a href="/rental-mobil/">Sewa mobil lepas kunci mulai 300 ribu perhari!!</a></p><p><img alt="mobil" src="/uploads/mobil-icon1.jpg" width="360" height="239" /></p><p></p>
 			<p class="testimonial-author"><img src="/uploads/nunik.jpg" alt="Photo of Nunik" /> Nunik</p>
 		</blockquote>
 	
