--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ p.small {
 </style>
 
 	<div class="page-header"> 
-         <h3>Sewa 🚴 Motor, Rental Mobil 🚘, Penginapan🚪</h3>
+         <h3>Sewa 🚴 Motor Jogja, Rental Mobil Yogya 🚘, Penginapan Murah Jogja🚪</h3>
 	</div>
 
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
