--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -40,7 +40,7 @@
 	<body>
 		<nav>
 	
-	        <a href="/">Home•</a>
+	        <a href="/">Home</a>
     
 		<a href="/sewa-motor/">Sewa•Motor</a>
 	
@@ -50,7 +50,7 @@
 	
 	
     
-		<a href="/penginapan/" class=" active">Penginapan•</a>
+		<a href="/penginapan/" class=" active">Penginapan</a>
 	
 </nav>
 		<section class="main">
