--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <meta property="og:locale" content="id_ID" />
 <meta name="description" content="Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum" />
 <meta property="og:description" content="Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum" />
+<meta property="og:type" content="website" />
+<meta property="og:image:secure_url" content="https://beningabaditransport.com/uploads/logo-bening.png" />
+<meta property="og:image:type" content="image/png" />
+<meta property="og:image:width" content="400" />
+<meta property="og:image:height" content="300" />
+<meta property="og:image:alt" content="Bening Logo" />
 <link rel="canonical" href="https://beningabaditransport.com/" />
 <meta property="og:url" content="https://beningabaditransport.com/" />
 <script type="application/ld+json">
