--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <meta name="description" content="Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum" />
 <meta property="og:description" content="Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum" />
 <meta property="og:type" content="website" />
+<meta property="og:image" content="http://beningabaditransport.com/uploads/logo-bening.png" />
 <meta property="og:image:secure_url" content="https://beningabaditransport.com/uploads/logo-bening.png" />
 <meta property="og:image:type" content="image/png" />
 <meta property="og:image:width" content="400" />
