--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@ p.small {
 <div class="testimonials">
 	
 		<blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/sewa-motor/">SEWA MOTOR MULAI 50 RIBU!!</a></p><p><img alt="motor" src="/uploads/motor-baru1.png" width="360" height="239" /></p><p></p>
+			<p class="testimonial-message"><a href="/sewa-motor">SEWA MOTOR MULAI 50 RIBU!!</a></p><p><img alt="motor" src="/uploads/motor-baru1.png" width="360" height="239" /></p><p></p>
 			<p class="testimonial-author"><img src="/uploads/aji.jpg" alt="Photo of Adjie" /> Adjie</p>
 		</blockquote>
 	
 		<blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/rental-mobil/">Sewa mobil lepas kunci mulai 300 ribu perhari!!</a></p><p><img alt="mobil" src="/uploads/mobil-icon1.jpg" width="360" height="239" /></p><p></p>
+			<p class="testimonial-message"><a href="/rental-mobil">Sewa mobil lepas kunci mulai 300 ribu perhari!!</a></p><p><img alt="mobil" src="/uploads/mobil-icon1.jpg" width="360" height="239" /></p><p></p>
 			<p class="testimonial-author"><img src="/uploads/nunik.jpg" alt="Photo of Nunik" /> Nunik</p>
 		</blockquote>
 	
 		<blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/penginapan/">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" src="/uploads/kamar-icon1.jpg" width="360" height="239" /></p><p></p>
+			<p class="testimonial-message"><a href="/penginapan">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" src="/uploads/kamar-icon1.jpg" width="360" height="239" /></p><p></p>
 			<p class="testimonial-author"><img src="https://placebear.com/60/60?a=.png" alt="Photo of Setyawan" /> Setyawan</p>
 		</blockquote>
 	
