--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ p.small {
 							</li>
 							
 								<li>
-									<a href="/contact/">
+									<a href="/contact">
 										
 
 										Kontak Kami
