--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ p.small {
 								</li>
 							
 								<li>
-									<a href="/advice/">
+									<a href="/advice">
 										
 
 										Cabang Janturan Yogyakarta
