--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ p.small {
 								</li>
 							
 								<li>
-									<a href="/advice/">
+									<a href="/advice">
 										
 
 										Cabang Gamping Yogyakarta
