--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	
 	
     
-		<a href="/rental-mobil/">Rental•Mobil</a>
+		<a href="/rental-mobil">Rental•Mobil</a>
 	
 	
     
@@ -80,15 +80,12 @@ p.small {
 	<div class="page-header"> 
          <h3>Sewa 🚴 Motor Jogja, Rental Mobil Yogya 🚘, Penginapan Murah Jogja🚪</h3>
 	</div>
-
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 	</p><h1>Sewa Motor Mulai 50 Ribu | Rental Mobil Mulai 300 Ribu perhari | Penginapan Mulai 150 Ribu</h1><h2>Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</h2>
 <div class="boxed">
 <p class="small">Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta, dengan lokasi yang strategis berdekatan dengan kampus seperti UGM dan UNY. Sewa motor, rental mobil, penginapan dan guest house adalah layanan utama kami. Di awal tahun 2020 ini kami memulai dengan tambahan unit motor baru seperti Honda Genio dan Honda Beat Street. Kami sewakan dengan harga yang sangat terjangkau untuk kalangan mahasiswa jogja dan customer umum. Semoga ke depan kami bisa memberikan pelayanan yang lebih baik kepada pelanggan pelanggan setia Bening Abadi Transport.</p><hr />
 		<p><img alt="logo bening" width="250" height="100" src="/uploads/logo-bening.png" /></p>
 	</div>
-
-
 <div class="testimonials">
 	
 		<blockquote class="testimonial">
