--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <meta property="og:title" content="Sewa Motor, Rental Mobil, Penginapan Bening Abadi Jogja" />
 <meta property="og:locale" content="id_ID" />
 <meta name="description" content="Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum" />
+<meta property="og:site_name" content="Bening Abadi Transport Website" /> 
 <meta property="og:description" content="Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="http://beningabaditransport.com/uploads/logo-bening.png" />
