--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 <meta property="og:image:width" content="400" />
 <meta property="og:image:height" content="300" />
 <meta property="og:image:alt" content="Bening Logo" />
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@beningabad1" />
+<meta name="twitter:creator" content="@beningabad1" />
+<meta property="og:url" content="http://beningabaditransport.com" />
+<meta property="og:title" content="Bening Abadi Transport" />
+<meta property="og:description" content="Sewa Motor Jogja, Rental Mobil Yogya, Penginapan Murah Yogyakarta" />
+<meta property="og:image" content="http://beningabaditransport.com/uploads/logo-bening.png" />
 <link rel="canonical" href="https://beningabaditransport.com/" />
 <meta property="og:url" content="https://beningabaditransport.com/" />
 <script type="application/ld+json">
