--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@beningabad1" />
 <meta name="twitter:creator" content="@beningabad1" />
-<meta property="og:url" content="http://beningabaditransport.com" />
-<meta property="og:title" content="Bening Abadi Transport" />
-<meta property="og:description" content="Sewa Motor Jogja, Rental Mobil Yogya, Penginapan Murah Yogyakarta" />
-<meta property="og:image" content="http://beningabaditransport.com/uploads/logo-bening.png" />
+<meta name="twitter:title" content="Bening Abadi Transport" />
+<meta name="twitter:description" content="Sewa Motor Jogja, Rental Mobil Yogya, Penginapan Murah Yogyakarta" />
+<meta name="twitter:image" content="http://beningabaditransport.com/uploads/logo-bening.png" />
 <link rel="canonical" href="https://beningabaditransport.com/" />
 <meta property="og:url" content="https://beningabaditransport.com/" />
 <script type="application/ld+json">
