--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ p.small {
 </style>
 
 	<div class="page-header"> 
-         <h1>Sewa 🚴 Motor Jogja, Rental Mobil Yogya 🚘, Penginapan Murah Yogyakarta🚪</h1>
+         <h1>Sewa 🚴 Motor Jogja,Rental Mobil Yogya,Penginapan Murah Yogyakarta</h1>
 	</div>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 	</p><h3>Sewa Motor Mulai 50 Ribu | Rental Mobil Mulai 300 Ribu perhari | Penginapan Mulai 150 Ribu</h3><h2>Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</h2>
