--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <meta name="twitter:title" content="Bening Abadi Transport" />
 <meta name="twitter:description" content="Sewa Motor Jogja, Rental Mobil Yogya, Penginapan Murah Yogyakarta" />
 <meta name="twitter:image" content="http://beningabaditransport.com/uploads/logo-bening.png" />
-<link rel="canonical" href="https://www.beningabaditransport.com/" />
+<link rel="canonical" href="https://www.beningabaditransport.com" />
 <meta property="og:url" content="https://beningabaditransport.com/" />
 <script type="application/ld+json">
 {"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://beningabaditransport.com/siteicon.png"}},"@type":"WebSite","headline":"Sewa 🚴 Motor, Rental Mobil 🚘, Penginapan🚪","url":"https://beningabaditransport.com/","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum","@context":"https://schema.org"}</script>
