--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="container" data-cms-content-wrapper="/_layouts/default.html">
 				<html lang="id">
 
-<script src="lazysizes.min.js" async>
+<script src="/js/lazysizes.min.js" async>
 
 <style>
 h3  { text-decoration: underline overline; text-align:center;
