--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="container" data-cms-content-wrapper="/_layouts/default.html">
 				<html lang="id">
 
-<script src="/js/lazysizes.min.js" async>
+<script src="/js/lazysizes.min.js" async></script>
 
 <style>
 h3  { text-decoration: underline overline; text-align:center;
@@ -242,6 +242,5 @@ p.small {
 			</div>
 		</footer>
 <p align="center"><iframe data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.1166853561253!2d110.38013141424142!3d-7.777450494394927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a59c915b63759%3A0x464727210bf21197!2sBening%20Abadi%20Transport!5e0!3m2!1sen!2sid!4v1578631010268!5m2!1sen!2sid" width="360" height="320" frameborder="2" class="lazyload" allowfullscreen=""></iframe></p>
-</script>
 </body>
 </html>
