--- a/index.html
+++ b/index.html
@@ -93,22 +93,22 @@ p.small {
 	</p><h3><q>Sewa Motor Mulai 50 Ribu | Rental Mobil Mulai 300 Ribu perhari | Penginapan Mulai 150 Ribu</q></h3><h2><q><span style="background-color:#F0E68C;">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h2>
 <div class="boxed">
 <p class="small"><q>Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta, dengan lokasi yang strategis berdekatan dengan kampus seperti UGM dan UNY. Sewa motor, rental mobil, penginapan dan guest house adalah layanan utama kami. Di awal tahun 2020 ini kami memulai dengan tambahan unit motor baru seperti Honda Genio dan Honda Beat Street. Kami sewakan dengan harga yang sangat terjangkau untuk kalangan mahasiswa jogja dan customer umum. Semoga ke depan kami bisa memberikan pelayanan yang lebih baik kepada pelanggan pelanggan setia Bening Abadi Transport.</q></p><hr />
-		<p><img alt="logo bening" width="250" height="100" data-src="/uploads/logo-bening.png" class="lazyload"/></p>
+		<p><img alt="logo bening" width="250" height="100" data-src="/uploads/logo-bening.webp" class="lazyload"/></p>
 	</div>
 <div class="testimonials">
 	
 		<blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/sewa-motor">SEWA MOTOR MULAI 50 RIBU!!</a></p><p><img alt="motor" data-src="/uploads/motor-baru1.png" width="360" height="239" class="lazyload" /></p><p></p>
+			<p class="testimonial-message"><a href="/sewa-motor">SEWA MOTOR MULAI 50 RIBU!!</a></p><p><img alt="motor" data-src="/uploads/motor-baru1.webp" width="360" height="239" class="lazyload" /></p><p></p>
 			<p class="testimonial-author"><img data-src="/uploads/aji.jpg" class="lazyload" alt="Photo of Adjie" />Adjie</p>
 		</blockquote>
 	
 		<blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/rental-mobil">Sewa mobil lepas kunci mulai 300 ribu perhari!!</a></p><p><img alt="mobil" data-src="/uploads/mobil-icon1.jpg" width="360" height="239" class="lazyload" /></p><p></p>
+			<p class="testimonial-message"><a href="/rental-mobil">Sewa mobil lepas kunci mulai 300 ribu perhari!!</a></p><p><img alt="mobil" data-src="/uploads/mobil-icon1.webp" width="360" height="239" class="lazyload" /></p><p></p>
 			<p class="testimonial-author"><img src="/uploads/nunik.jpg" class="lazyload" alt="Photo of Nunik" />Nunik</p>
 		</blockquote>
 	
 		<blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/penginapan">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" data-src="/uploads/kamar-icon1.jpg" width="360" height="239" class="lazyload" /></p><p></p>
+			<p class="testimonial-message"><a href="/penginapan">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" data-src="/uploads/kamar-icon1.webp" width="360" height="239" class="lazyload" /></p><p></p>
 			<p class="testimonial-author"><img src="https://placebear.com/60/60?a=.png" alt="Photo of Setyawan" />Setyawan</p>
 		</blockquote>
 	
