--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@ p.small {
 	
 		<blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/sewa-motor">SEWA MOTOR MULAI 50 RIBU!!</a></p><p><img alt="motor" data-src="/uploads/motor-baru1.webp" width="360" height="239" class="lazyload" /></p><p></p>
-			<p class="testimonial-author"><img data-src="/uploads/aji.jpg" class="lazyload" alt="Photo of Adjie" />Adjie</p>
+			<p class="testimonial-author"><img data-src="/uploads/aji.webp" class="lazyload" alt="Photo of Adjie" />Adjie</p>
 		</blockquote>
 	
 		<blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/rental-mobil">Sewa mobil lepas kunci mulai 300 ribu perhari!!</a></p><p><img alt="mobil" data-src="/uploads/mobil-icon1.webp" width="360" height="239" class="lazyload" /></p><p></p>
-			<p class="testimonial-author"><img src="/uploads/nunik.jpg" class="lazyload" alt="Photo of Nunik" />Nunik</p>
+			<p class="testimonial-author"><img src="/uploads/nunik.webp" class="lazyload" alt="Photo of Nunik" />Nunik</p>
 		</blockquote>
 	
 		<blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/penginapan">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" data-src="/uploads/kamar-icon1.webp" width="360" height="239" class="lazyload" /></p><p></p>
-			<p class="testimonial-author"><img src="https://placebear.com/60/60?a=.png" alt="Photo of Setyawan" />Setyawan</p>
+			<p class="testimonial-author"><img src="/uploads/setya.webp" alt="Photo of Setyawan" />Setyawan</p>
 		</blockquote>
 	
 </div>
