--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <link rel="canonical" href="https://beningabaditransport.com" />
 <meta property="og:url" content="https://beningabaditransport.com/" />
 <script type="application/ld+json">
-{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://beningabaditransport.com/siteicon.png"}},"@type":"WebSite","headline":"Sewa 🚴 Motor, Rental Mobil 🚘, Penginapan🚪","url":"https://beningabaditransport.com/","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum","@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://beningabaditransport.com/siteicon.png"}},"@type":"WebSite","headline":"Sewa Motor, Rental Mobil, Penginapan","url":"https://beningabaditransport.com/","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 		<link type="application/atom+xml" rel="alternate" href="https://beningabaditransport.com/feed.xml" title="" />
