--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ p.small {
 	
 		<blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" data-src="/uploads/kamar-icon1.webp" width="360" height="239" class="lazyload" /></p><p></p>
-			<p class="testimonial-author"><img src="/uploads/setya.webp" alt="Photo of Setyawan" />Setyawan</p>
+			<p class="testimonial-author"><img src="/uploads/setya.webp" class="lazyload" alt="Photo of Setyawan" />Setyawan</p>
 		</blockquote>
 	
 </div>
