--- a/index.html
+++ b/index.html
@@ -98,17 +98,22 @@ p.small {
 <div class="testimonials">
 	
 		<blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/sewa-motor" title="Sewa MotorYogya">SEWA MOTOR MULAI 50 RIBU!!</a></p><p><img alt="motor" data-src="/uploads/motor-baru1.webp" width="360" height="239" class="lazyload" /></p><p></p>
+			<p class="testimonial-message"><a href="/sewa-motor" title="Sewa MotorYogya">SEWA MOTOR MULAI 50 RIBU!!</a></p><p><img alt="motor" data-src="/uploads/motor-baru1.webp" width="360" height="239" class="lazyload" /></p>
 			<p class="testimonial-author"><img data-src="/uploads/aji.webp" class="lazyload" alt="Photo of Adjie" />Adjie</p>
 		</blockquote>
 	
 		<blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya">Sewa mobil lepas kunci mulai 300 ribu perhari!!</a></p><p><img alt="mobil" data-src="/uploads/mobil-icon1.webp" width="360" height="239" class="lazyload" /></p><p></p>
+			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya">Sewa mobil lepas kunci mulai 300 ribu perhari!!</a></p><p><img alt="mobil" data-src="/uploads/mobil-icon1.webp" width="360" height="239" class="lazyload" /></p>
 			<p class="testimonial-author"><img src="/uploads/nunik.webp" class="lazyload" alt="Photo of Nunik" />Nunik</p>
 		</blockquote>
 	
 		<blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" data-src="/uploads/kamar-icon1.webp" width="360" height="239" class="lazyload" /></p><p></p>
+			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" data-src="/uploads/kamar-icon1.webp" width="360" height="239" class="lazyload" /></p>
+			<p class="testimonial-author"><img src="/uploads/setya.webp" class="lazyload" alt="Photo of Setyawan" />Setyawan</p>
+		</blockquote>
+  
+                <blockquote class="testimonial">
+			<p class="testimonial-message">Lokasi Bening Abadi</p><p><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" /></p>
 			<p class="testimonial-author"><img src="/uploads/setya.webp" class="lazyload" alt="Photo of Setyawan" />Setyawan</p>
 		</blockquote>
 	
@@ -241,6 +246,5 @@ p.small {
 				</div>
 			</div>
 		</footer>
-<p align="center"><iframe data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.1166853561253!2d110.38013141424142!3d-7.777450494394927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a59c915b63759%3A0x464727210bf21197!2sBening%20Abadi%20Transport!5e0!3m2!1sen!2sid!4v1578631010268!5m2!1sen!2sid" width="360" height="320" frameborder="2" class="lazyload" allowfullscreen=""></iframe></p>
 </body>
 </html>
