--- a/index.html
+++ b/index.html
@@ -110,16 +110,15 @@ p.small {
 		<blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" data-src="/uploads/kamar-icon1.webp" width="360" height="239" class="lazyload" /></p>
 			<p class="testimonial-author"><img src="/uploads/setya.webp" class="lazyload" alt="Photo of Setyawan" />Setyawan</p>
-		</blockquote>
-  
-                <blockquote class="testimonial">
+		</blockquote>              
+</div>
+</article>
+<blockquote class="testimonial">
 			<p class="testimonial-message">Lokasi Bening Abadi</p><p><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" /></p>
 			<p class="testimonial-author"><img src="/uploads/setya.webp" class="lazyload" alt="Photo of Setyawan" />Setyawan</p>
 		</blockquote>
 	
-</div>
-</article>
-</head></html>
+</head>
 			</div>
 		</section>
         
