--- a/index.html
+++ b/index.html
@@ -113,11 +113,8 @@ p.small {
 		</blockquote>              
 </div>
 </article>
-<blockquote class="testimonial">
-			<p class="testimonial-message">Lokasi Bening Abadi</p><p><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" /></p>
-			<p class="testimonial-author"><img src="/uploads/setya.webp" class="lazyload" alt="Photo of Setyawan" />Setyawan</p>
-		</blockquote>
-	
+<blockquote>
+<p>Lokasi Bening Abadi Transport!</p><p><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" /></p>
 </head>
 			</div>
 		</section>
