--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ p.small {
 </div>
 </article>
 <blockquote>
-<p><h4>Lokasi Bening Abadi Transport!</h4></p><p><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" /></p>
+<p><h4>Lokasi Bening Abadi Transport!</h4></p><p><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" width="360" allowfullscreen="" /></p>
 </head>
 			</div>
 		</section>
