--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@ p.small {
 		</blockquote>              
 </div>
 </article>
-<blockquote>
-<p><h4>Lokasi Bening Abadi Transport!</h4></p><p><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" width="360" allowfullscreen="" /></p>
+<h4>Lokasi Bening Abadi Transport!</h4><br><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" width="360" allowfullscreen="" />
 </head>
 			</div>
 		</section>
