--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ p.small {
 		</blockquote>              
 </div>
 </article>
-<h4>Lokasi Bening Abadi Transport!</h4><br><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" width="360" allowfullscreen="" />
+<h4>Lokasi Bening Abadi Transport!</h4><br><img alt="peta" data-src="/uploads/bening-map.svg" class="lazyload" width="360" allowfullscreen="" />
 </head>
 			</div>
 		</section>
