--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ p.small {
 		</blockquote>              
 </div>
 </article>
-<h4>Lokasi Bening Abadi Transport!</h4><br><img alt="peta" data-src="/uploads/bening-map.svg" class="lazyload" width="360" allowfullscreen="" />
+<h4>Lokasi Bening Abadi Transport!</h4><br><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" width="360" allowfullscreen="" />
 </head>
 			</div>
 		</section>
@@ -228,15 +228,15 @@ p.small {
 					
 
 					<ul class="footer-links">
-					<li><b>Syarat Dan Ketentuan Berlaku</b><br />
- - Jam Operasional 09.00 – 22.00 WIB<br />
-- Jam Operasional 09.00 – 18.00 WIB khusus cabang Janturan 32B<br />
+					<li><b>Syarat Dan Ketentuan Berlaku</b><br>
+ - Jam Operasional 09.00 – 22.00 WIB<br>
+- Jam Operasional 09.00 – 18.00 WIB khusus cabang Janturan 32B<br>
 <p>- Pengantaran dan pengambilan mobil/motor mulai jam 09.00-21.00 WIB.              Diluar  jam diatas bisa langsung datang ke garasi kami.</p><br />
-- 3 Tanda pengenal/ID (KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS)<br />
-- No Telp HP customer yang bisa dihubungi<br />
-- Tanpa uang jaminan<br />
-- Overtime 10% per jam dari Tarif Sewa<br />
-<b> - Saat hari High Season harga berbeda dengan harga hari normal</b></li>
+- 3 Tanda pengenal/ID (KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS)<br>
+- No Telp HP customer yang bisa dihubungi<br>
+- Tanpa uang jaminan<br>
+- Overtime 10% per jam dari Tarif Sewa<br>
+<b>- Saat hari High Season harga berbeda dengan harga hari normal</b></li>
 					</ul>
 				</div>
 			</div>
