--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -193,7 +193,7 @@ h3  { text-decoration: underline overline;
 							
 						</ul>
 					
-
+<div class="fb-comments fb_iframe_widget fb_iframe_widget_fluid_desktop" data-href="https://beningabaditransport.com/" data-numposts="5" fb-xfbml-state="rendered" fb-iframe-plugin-query="app_id=819140248140343&amp;container_width=0&amp;height=100&amp;href=https%3A%2F%2Fbeningabaditransport.com%2F&amp;locale=en_US&amp;numposts=5&amp;sdk=joey&amp;version=v2.9&amp;width=550"><span style="vertical-align: bottom; width: 550px; height: 239px;"><iframe name="fa35fbece96fec" title="fb:comments Facebook Social Plugin" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" style="border: medium none; visibility: visible; width: 550px; height: 239px;" src="https://web.facebook.com/v2.9/plugins/comments.php?app_id=819140248140343&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D45%23cb%3Df38fb9081a5f31e%26domain%3Dbeningabaditransport.com%26origin%3Dhttps%253A%252F%252Fbeningabaditransport.com%252Ff2c95ec8179b4a%26relation%3Dparent.parent&amp;container_width=0&amp;height=100&amp;href=https%3A%2F%2Fbeningabaditransport.com%2F&amp;locale=en_US&amp;numposts=5&amp;sdk=joey&amp;version=v2.9&amp;width=550" class="" frameborder="0" height="100px" width="550px"></iframe></span></div>
 					<ul class="footer-links">
 					<li><b>Syarat Dan Ketentuan Berlaku</b><br />
  - Jam Operasional 09.00 – 22.00 WIB<br />
