--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ p.small {
 	
 		<blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/sewa-motor" title="Sewa MotorYogya">SEWA MOTOR MULAI 50 RIBU!!</a></p><p><img alt="motor" data-src="/uploads/motor-baru1.webp" width="360" height="239" class="lazyload" /></p>
-			<p class="testimonial-author"><img data-src="/uploads/aji.webp" class="lazyload" alt="Photo of Adjie" />Adjie</p>
+			<p class="testimonial-author"><img src="/uploads/aji.webp" class="lazyload" alt="Photo of Adjie" />Adjie</p>
 		</blockquote>
 	
 		<blockquote class="testimonial">
