--- a/index.html
+++ b/index.html
@@ -74,8 +74,6 @@
 			<div class="container" data-cms-content-wrapper="/_layouts/default.html">
 				<html lang="id">
 
-<script src="/js/lazysizes.min.js" async></script>
-
 <style>
 h3  { text-decoration: underline overline; text-align:center;
 }
@@ -85,7 +83,7 @@ p.small {
   text-justify: inter-word;
 }
 </style>
-
+<script src="/js/lazysizes.min.js" async></script>
 	<div class="page-header"> 
          <h1>Sewa 🚴 Motor Jogja,Rental Mobil Yogya,Penginapan Yogyakarta</h1>
 	</div>
@@ -99,17 +97,17 @@ p.small {
 	
 		<blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/sewa-motor" title="Sewa MotorYogya">SEWA MOTOR MULAI 50 RIBU!!</a></p><p><img alt="motor" data-src="/uploads/motor-baru1.webp" width="360" height="239" class="lazyload" /></p>
-			<p class="testimonial-author"><img src="/uploads/aji.webp" class="lazyload" alt="Photo of Adjie" />Adjie</p>
+			<p class="testimonial-author"><img data-src="/uploads/aji.webp" class="lazyload" alt="Photo of Adjie" />Adjie</p>
 		</blockquote>
 	
 		<blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya">Sewa mobil lepas kunci mulai 300 ribu perhari!!</a></p><p><img alt="mobil" data-src="/uploads/mobil-icon1.webp" width="360" height="239" class="lazyload" /></p>
-			<p class="testimonial-author"><img src="/uploads/nunik.webp" class="lazyload" alt="Photo of Nunik" />Nunik</p>
+			<p class="testimonial-author"><img data-src="/uploads/nunik.webp" class="lazyload" alt="Photo of Nunik" />Nunik</p>
 		</blockquote>
 	
 		<blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" data-src="/uploads/kamar-icon1.webp" width="360" height="239" class="lazyload" /></p>
-			<p class="testimonial-author"><img src="/uploads/setya.webp" class="lazyload" alt="Photo of Setyawan" />Setyawan</p>
+			<p class="testimonial-author"><img data-src="/uploads/setya.webp" class="lazyload" alt="Photo of Setyawan" />Setyawan</p>
 		</blockquote>              
 </div>
 </article>
