--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<script async src='https://www.google-analytics.com/analytics.js'></script>
 			<meta property="og:locale" content="id_ID" />
 	
-<script src="/js/lazysizes.min.js" async=" "></script>
+<script src="/js/lazysizes.min.js" async></script>
 </head>
 	<body>
 		<nav>
