--- a/index.html
+++ b/index.html
@@ -30,23 +30,16 @@
 <script type="application/ld+json">
 {"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://beningabaditransport.com/siteicon.png"}},"@type":"WebSite","headline":"Sewa Motor, Rental Mobil, Penginapan","url":"https://beningabaditransport.com/","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-
-		<link type="application/atom+xml" rel="alternate" href="https://beningabaditransport.com/feed.xml" title="" />
 		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Quattrocento|Vollkorn:400,400i,700,700i" />
 		<link rel="stylesheet" href="/css/main.css" />
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" href="/touch-icon.png" sizes="192x192" />
 		<link rel="icon" type="image/png" href="/images/favicon.png" />
         <link href="//fonts.googleapis.com/css?family=Antic+Slab|Fira+Sans" rel="stylesheet" />
 		<link rel="stylesheet" media="screen" href="/css/screen.css" />
-		
-		<link rel="icon" type="image/png" href="/images/favicon.png" />
-		
-			<script>
+		<script>
 				window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 				ga('create', 'UA-131533286-1', 'auto');
 				ga('send', 'pageview');
-			</script>
+		</script>
 			<script async src='https://www.google-analytics.com/analytics.js'></script>
 			<meta property="og:locale" content="id_ID" />
 	
@@ -72,7 +65,7 @@
 		<a href="/penginapan" title="Penginapan Yogya">Penginapan</a>
 	
 </nav>
-<script src="/js/lazysizes.min.js" async></script>	
+<script async src="/js/lazysizes.min.js"></script>	
 <section class="main">
 			<div class="container" data-cms-content-wrapper="/_layouts/default.html">
 				<html lang="id">
