--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ p.small {
 }
 </style>
 	<div class="page-header"> 
-         <h1>Sewa 🚴 Motor Jogja,Rental Mobil Yogya,Penginapan Yogyakarta</h1>
+         <h1>Sewa Motor Jogja,Rental Mobil Yogya,Penginapan Yogyakarta</h1>
 	</div>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 	</p><h3><q>Sewa Motor Mulai 50 Ribu | Rental Mobil Mulai 300 Ribu perhari | Penginapan Mulai 150 Ribu</q></h3><h2><q><span style="background-color:#F0E68C;">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h2>
