--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -199,6 +199,11 @@ h3  { text-decoration: underline overline;
 </div>
 
 <script async src="https://static.addtoany.com/menu/page.js"></script>					
+<div class="a2a_kit">
+    <a class="a2a_button_facebook_like" data-href="https://www.example.com/" data-layout="standard" data-show-faces="true" data-width="450"></a>
+</div>
+
+<script async src="https://static.addtoany.com/menu/page.js"></script>
 <ul class="footer-links">
 					<li><b>Syarat Dan Ketentuan Berlaku</b><br />
  - Jam Operasional 09.00 – 22.00 WIB<br />
