--- a/index.html
+++ b/index.html
@@ -115,10 +115,13 @@ p.small {
 			</section>
 <div class="fb-comments fb_iframe_widget fb_iframe_widget_fluid_desktop" data-href="https://beningabaditransport.com/" data-numposts="5" fb-xfbml-state="rendered" fb-iframe-plugin-query="app_id=819140248140343&amp;container_width=0&amp;height=100&amp;href=https%3A%2F%2Fbeningabaditransport.com%2F&amp;locale=en_US&amp;numposts=5&amp;sdk=joey&amp;version=v2.9&amp;width=550"><span style="vertical-align: bottom; width: 550px; height: 239px;"><iframe name="fa35fbece96fec" title="fb:comments Facebook Social Plugin" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" style="border: medium none; visibility: visible; width: 550px; height: 239px;" src="https://web.facebook.com/v2.9/plugins/comments.php?app_id=819140248140343&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D45%23cb%3Df38fb9081a5f31e%26domain%3Dbeningabaditransport.com%26origin%3Dhttps%253A%252F%252Fbeningabaditransport.com%252Ff2c95ec8179b4a%26relation%3Dparent.parent&amp;container_width=0&amp;height=100&amp;href=https%3A%2F%2Fbeningabaditransport.com%2F&amp;locale=en_US&amp;numposts=5&amp;sdk=joey&amp;version=v2.9&amp;width=550" class="" frameborder="0" height="100px" width="550px"></iframe></span></div>	
 <div class="a2a_kit">
-    <a class="a2a_button_facebook_like" data-href="https://www.example.com/" data-layout="standard" data-show-faces="true" data-width="450"></a>
+    <a class="a2a_button_facebook_like" data-href="https://beningabaditransport.com/" data-layout="standard" data-show-faces="true" data-width="450"></a>
 </div>
 
 <script async src="https://static.addtoany.com/menu/page.js"></script>
+<a href="https://www.facebook.com/sharer/sharer.php?u=http%3a%2f%2fdaniemon.com%2fblog%2fstatic-social-media-share-buttons%2f">
+    Share
+</a>
 <footer>
 			<div class="container">
 	        <div class="footer-columns">
