--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ p.small {
 
 <script async src="https://static.addtoany.com/menu/page.js"></script>
 <a href="https://www.facebook.com/sharer/sharer.php?u=http%3a%2f%2fdaniemon.com%2fblog%2fstatic-social-media-share-buttons%2f">
-    Share
+     Share di FB!
 </a>
 <footer>
 			<div class="container">
