--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ p.small {
 </div>
 
 <script async src="https://static.addtoany.com/menu/page.js"></script>
-<a href="https://www.facebook.com/sharer/sharer.php?u=https%3a%2f%2fbeningabaditransport.com%2fWebsite%2fSewa-Motor-Mobil-Penginapan-Jogja%2f">
+<a href="https://www.facebook.com/sharer/sharer.php?u=https%3a%2f%2fbeningabaditransport.com%2f">
      Share di FB!
 </a>
 <footer>
