--- a/index.html
+++ b/index.html
@@ -118,11 +118,10 @@ p.small {
 <div class="a2a_kit">
     <a class="a2a_button_facebook_like" data-href="https://beningabaditransport.com/" data-layout="standard" data-show-faces="true" data-width="360"></a>
 </div>
-
-<script async src="https://static.addtoany.com/menu/page.js"></script><br>
+<p><script async src="https://static.addtoany.com/menu/page.js"></script><br>
 <a href="https://www.facebook.com/sharer/sharer.php?u=https%3a%2f%2fbeningabaditransport.com%2f">
      Share di FB!
-</a>
+</a></p>
 <footer>
 			<div class="container">
 	        <div class="footer-columns">
