--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -75,8 +75,8 @@ h3  { text-decoration: underline overline;
 		<p>Kami berusaha mengumpulkan destinasi tujuan wisata favorit di Yogyakarta saat ini, kami akan mengupdate daftar seperti di bawah ini:</p><hr />
 		<p>1. TEBING BREKSI</p>
 		<p>Salah satu destinasi favorit di Yogyakarta saat ini, terletak di Kabupaten Sleman, DIY. Berawal dari tebing tebing kapur yang dipahat, tebing ini sekarang menjadi salah satu tujuan wisata teramai di Yogyakarta.</p>
-		<p><img width="700" height="3<93" src="/uploads/tebing-breksi-wisata-murah-jogja.jpg" /></p>
-        <iframe width="380" height="320" src="https://www.youtube.com/embed/7BkdQUKRjtI?color=white&theme=light"></iframe>
+		<p><img width="700" height="393" src="/uploads/tebing-breksi-wisata-murah-jogja.jpg" /></p>
+        <iframe width="300" height="220" src="https://www.youtube.com/embed/7BkdQUKRjtI?color=white&theme=light"></iframe>
 		<p>2. CANDI IJO</p>
 		<p>Setelah mengunjungi tebing breksi, anda bisa langsung lurus keatas menuju Candi Ijo, sebuah kompleks candi hindu, terletak di 4 km sebelah selatan Candi Boko. Candi Ijo termasuk salah satu candi yang tertinggi di DIY.&nbsp;</p>
 		<blockquote>
