--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ p.small {
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 	</p><h3><q>Sewa Motor Mulai 50 Ribu | Rental Mobil Mulai 300 Ribu perhari | Penginapan Mulai 150 Ribu</q></h3><h2><q><span style="background-color:#F0E68C;">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h2>
 <div class="boxed">
-<p class="small"><q>Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta, dengan lokasi yang strategis berdekatan dengan kampus terkenal seperti UGM dan UNY Jogja. Sewa motor, rental mobil, penginapan dan guest house adalah layanan utama kami. Di awal tahun 2020 ini kami memulai dengan tambahan unit motor baru seperti Honda Genio dan Honda Beat Street. Kami sewakan dengan harga yang sangat terjangkau untuk kalangan mahasiswa jogja dan customer umum. Untuk guest house kamar yang kami tawarkan juga bisa anda booking melalui aplikasi Traveloka dengan harga yang lebih murah dan terjangkau untuk mahasiswa dan pelajar yogya. Semoga ke depan kami bisa memberikan pelayanan yang lebih baik kepada pelanggan pelanggan setia Bening Abadi Transport.</q></p><hr>
+<p class="small"><q>Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta, dengan lokasi yang strategis berdekatan dengan kampus terkenal seperti UGM dan UNY Jogja. Sewa motor, rental mobil, penginapan dan guest house adalah layanan utama kami di kota Yogya. Di awal tahun 2020 ini kami memulai dengan tambahan unit motor baru seperti Honda Genio dan Honda Beat Street. Kami rental kan dengan harga yang sangat terjangkau untuk kalangan mahasiswa jogja dan customer umum. Untuk guest house kamar yang kami tawarkan juga bisa anda booking melalui aplikasi Traveloka dengan harga yang lebih murah dan terjangkau untuk mahasiswa dan pelajar yogya. Semoga ke depan kami bisa memberikan pelayanan yang lebih baik kepada pelanggan pelanggan setia Bening Abadi Transport.</q></p><hr>
 		<p><img alt="logo bening" width="250" height="100" data-src="/uploads/logo-bening.webp" class="lazyload" /></p>
 	</div>
 <div class="testimonials">
@@ -118,7 +118,7 @@ p.small {
      Share di FB!
 </a>
 <div class="a2a_kit">
-    <a class="a2a_button_facebook_like" data-href="https://beningabaditransport.com/" data-layout="standard" data-show-faces="true" data-width="360"></a>
+    <a class="a2a_button_facebook_like" data-href="https://beningabaditransport.com/" data-layout="standard" data-show-faces="true" data-width="360" title="Like FB"></a>
 </div>
 <script async src="https://static.addtoany.com/menu/page.js"></script>
 <footer>
