--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 <!-- End Jekyll SEO tag -->
 		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Quattrocento|Vollkorn:400,400i,700,700i" />
 		<link rel="stylesheet" href="/css/main.css" />
-		<link rel="icon" type="image/png" href="/images/favicon.png" />
-        <link href="//fonts.googleapis.com/css?family=Antic+Slab|Fira+Sans" rel="stylesheet" />
+		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" href="/touch-icon.png" sizes="192x192" />
+                <link rel="icon" type="image/png" href="/images/favicon.png" />
+                <link href="//fonts.googleapis.com/css?family=Antic+Slab|Fira+Sans" rel="stylesheet" />
 		<link rel="stylesheet" media="screen" href="/css/screen.css" />
 		<script>
 				window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
