--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -22,7 +22,7 @@
 		<link rel="stylesheet" href="/css/main.css" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" href="/touch-icon.png" sizes="192x192" />
-		<link rel="icon" type="image/png" href="/images/favicon.png" />
+		<link rel="icon" type="image/png" href="/favicon.png" />
         <link href="//fonts.googleapis.com/css?family=Antic+Slab|Fira+Sans" rel="stylesheet" />
 		<link rel="stylesheet" media="screen" href="/css/screen.css" />
 		
