--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@ p.small {
 }
 .fb {
      vertical-align: bottom; width: 400px; height: 239px;
+}
+.borderfb { border: medium none; visibility: visible; width: 400px; height: 239px;
+}
 </style>
 	<div class="page-header"> 
          <h1>Sewa Motor Jogja,Rental Mobil Yogya,Penginapan Yogyakarta</h1>
@@ -120,7 +123,7 @@ p.small {
 					HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut
 				</p>
 			</section>
-<div class="fb-comments fb_iframe_widget fb_iframe_widget_fluid_desktop" data-href="https://beningabaditransport.com/" data-numposts="5" fb-xfbml-state="rendered" fb-iframe-plugin-query="app_id=819140248140343&amp;container_width=0&amp;height=100&amp;href=https%3A%2F%2Fbeningabaditransport.com%2F&amp;locale=en_US&amp;numposts=5&amp;sdk=joey&amp;version=v2.9&amp;width=360"><span class="fb"><iframe name="fa35fbece96fec" title="fb:comments Facebook Social Plugin" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" style="border: medium none; visibility: visible; width: 400px; height: 239px;" src="https://web.facebook.com/v2.9/plugins/comments.php?app_id=819140248140343&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D45%23cb%3Df38fb9081a5f31e%26domain%3Dbeningabaditransport.com%26origin%3Dhttps%253A%252F%252Fbeningabaditransport.com%252Ff2c95ec8179b4a%26relation%3Dparent.parent&amp;container_width=0&amp;height=100&amp;href=https%3A%2F%2Fbeningabaditransport.com%2F&amp;locale=en_US&amp;numposts=5&amp;sdk=joey&amp;version=v2.9&amp;width=550" class="" frameborder="0" height="200px" width="400px"></iframe></span></div>	
+<div class="fb-comments fb_iframe_widget fb_iframe_widget_fluid_desktop" data-href="https://beningabaditransport.com/" data-numposts="5" fb-xfbml-state="rendered" fb-iframe-plugin-query="app_id=819140248140343&amp;container_width=0&amp;height=100&amp;href=https%3A%2F%2Fbeningabaditransport.com%2F&amp;locale=en_US&amp;numposts=5&amp;sdk=joey&amp;version=v2.9&amp;width=360"><span class="fb"><iframe name="fa35fbece96fec" title="fb:comments Facebook Social Plugin" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" class="borderfb" src="https://web.facebook.com/v2.9/plugins/comments.php?app_id=819140248140343&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D45%23cb%3Df38fb9081a5f31e%26domain%3Dbeningabaditransport.com%26origin%3Dhttps%253A%252F%252Fbeningabaditransport.com%252Ff2c95ec8179b4a%26relation%3Dparent.parent&amp;container_width=0&amp;height=100&amp;href=https%3A%2F%2Fbeningabaditransport.com%2F&amp;locale=en_US&amp;numposts=5&amp;sdk=joey&amp;version=v2.9&amp;width=550" class="" frameborder="0" height="200px" width="400px"></iframe></span></div>	
 <a href="https://www.facebook.com/sharer/sharer.php?u=https%3a%2f%2fbeningabaditransport.com%2f" title="Share FB">
      Share di FB!
 </a>
