--- a/404.html
+++ b/404.html
@@ -22,21 +22,19 @@
 		<link rel="stylesheet" href="/css/main.css" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" href="/touch-icon.png" sizes="192x192" />
-		<link rel="icon" type="image/png" href="/images/favicon.png" />
+		<link rel="icon" type="image/png" href="/favicon.png" />
         <link href="//fonts.googleapis.com/css?family=Antic+Slab|Fira+Sans" rel="stylesheet" />
-		<link rel="stylesheet" media="screen" href="/css/screen.css" />
-		
-		<link rel="icon" type="image/png" href="/images/favicon.png" />
-		
-			<script>
-				window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+<script>
+window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 				ga('create', 'UA-131533286-1', 'auto');
 				ga('send', 'pageview');
 			</script>
 			<script async src='https://www.google-analytics.com/analytics.js'></script>
-			<meta property="og:locale" content="id_ID" />
-		
-	</head>
+<style>
+nav  {position:flex; width:100%; display:flex; justify-content:center; background:rgba(255,255,255,0.5);z-index:999}
+nav a {display:inline-block; text-decoration:none; padding:4px; color:#444; letter-spacing:1px; font-size:.6em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
+</style>
+</head>
 	<body>
 		<nav>
 	
@@ -67,7 +65,7 @@ h3  { text-decoration: underline overline;
 </style>
 
 	<div class="page-header"> 
-         <h3>Not Found</h3>
+         <h3>Not Found / Tidak Ditemukan</h3>
 	</div>
 
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
