--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -69,7 +69,7 @@ h1  { text-decoration: underline overline;
 
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 	<div class="editable" data-cms-source="/objek-wisata-jogja/index.html" data-cms-index="0">
-		<p>Kami berusaha mengumpulkan destinasi tujuan wisata favorit di Yogyakarta saat ini, kami akan mengupdate daftar seperti di bawah ini:</p><hr />
+		<p>Kami berusaha mengumpulkan destinasi tujuan obyek wisata jogja favorit ini untuk menjadi tujuan utama wisatawan yang menjadi pelanggan kami, kami akan mengupdate terus daftar seperti di bawah ini:</p><hr />
 		<p>1. TEBING BREKSI</p>
 		<p>Salah satu destinasi favorit di Yogyakarta saat ini, terletak di Kabupaten Sleman, DIY. Berawal dari tebing tebing kapur yang dipahat, tebing ini sekarang menjadi salah satu tujuan wisata teramai di Yogyakarta.</p>
 		<p><img width="700" height="393" src="/uploads/tebing-breksi-wisata-murah-jogja.jpg" /></p>
