--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ p.small {
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 	</p><h3><q>Sewa Motor Mulai 50 Ribu | Rental Mobil Mulai 300 Ribu perhari | Penginapan Mulai 150 Ribu</q></h3><h2><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h2>
 <div class="boxed">
-<p class="small"><q>Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta, dengan lokasi yang strategis berdekatan dengan kampus terkenal seperti UGM dan UNY Jogja. Sewa motor, rental mobil, penginapan dan guest house adalah layanan utama kami di kota Yogya. Di awal tahun 2020 ini kami memulai dengan tambahan unit motor baru seperti Honda Genio dan Honda Beat Street. Kami rental kan dengan harga yang sangat terjangkau untuk kalangan mahasiswa jogja dan customer umum. Untuk guest house kamar yang kami tawarkan juga bisa anda booking melalui aplikasi Traveloka dengan harga yang lebih murah dan terjangkau untuk mahasiswa dan pelajar yogya. Semoga ke depan kami bisa memberikan pelayanan yang lebih baik kepada pelanggan pelanggan setia Bening Abadi Transport.</q></p><hr>
+<p class="small"><q>Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta, dengan lokasi yang strategis berdekatan dengan kampus terkenal seperti UGM dan UNY Jogja. Sewa motor, rental mobil, penginapan dan guest house adalah layanan utama kami di kota yogya. Di awal tahun 2020 ini kami memulai dengan tambahan unit motor baru seperti Honda Genio dan Honda Beat Street. Kami rental kan dengan harga yang sangat terjangkau untuk kalangan mahasiswa jogja dan customer umum. Untuk guest house kamar yang kami tawarkan juga bisa anda booking melalui aplikasi Traveloka dengan harga yang lebih murah dan terjangkau untuk mahasiswa dan pelajar yogya. Semoga ke depan kami bisa memberikan pelayanan yang lebih baik kepada pelanggan pelanggan setia Bening Abadi Transport.</q></p><hr>
 		<p><img alt="logo bening" width="250" height="100" data-src="/uploads/logo-bening.webp" class="lazyload" /></p>
 	</div>
 <div class="testimonials">
@@ -116,7 +116,7 @@ p.small {
 		</blockquote>              
 </div>
 </article>
-<h4>Lokasi Bening Abadi Transport!</h4><br><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" width="300" allowfullscreen="" />
+<h4>Lokasi Bening Abadi Transport Yogya !</h4><br><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" width="300" allowfullscreen="" />
 
 			</div>
 		</section>
@@ -236,12 +236,12 @@ p.small {
 					<li><b>Syarat Dan Ketentuan Berlaku</b><br>
  - Jam Operasional 09.00 – 22.00 WIB<br>
 - Jam Operasional 09.00 – 18.00 WIB khusus cabang Janturan 32B<br>
-<p>- Pengantaran dan pengambilan mobil/motor mulai jam 09.00-21.00 WIB.              Diluar  jam diatas bisa langsung datang ke garasi kami.</p><br />
+<p>- Pengantaran dan pengambilan mobil/motor mulai jam 09.00-21.00 WIB.              Diluar  jam diatas bisa langsung datang ke garasi kami.</p><br>
 - 3 Tanda pengenal/ID (KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS)<br>
 - No Telp HP customer yang bisa dihubungi<br>
 - Tanpa uang jaminan<br>
 - Overtime 10% per jam dari Tarif Sewa<br>
-<b>- Saat hari High Season harga berbeda dengan harga hari normal</b></li>
+<b>- Saat hari High Season harga berbeda dengan harga hari normal</b></li><hr>
 					</ul>
 				</div>
 			</div>
