--- a/index.html
+++ b/index.html
@@ -245,6 +245,10 @@ p.small {
 					</ul>
 				</div>
 			</div>
+  <div class="legal-line">
+				<p class="container">
+					&copy; 2020 BAT &bull;
+                  </div>
 		</footer>
 </body>
 </html>
