--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ p.small {
 			</div>
   <div class="legal-line">
 				<p class="container">
-					&copy; 2020 BAT &bull;
+					&copy; 2020 Bening Abadi Transport &bull;
                 </p>
              </div>
 		</footer>
