--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -221,6 +221,8 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
 
 nav  {position:flex; width:100%; display:flex; justify-content:center; background:rgba(255,255,255,0.5);z-index:999}
 nav a {display:inline-block; text-decoration:none; padding:4px; color:#444; letter-spacing:1px; font-size:.6em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
+h1  { text-decoration: underline overline;
+    }
 </style>
 </head>
 	<body>
@@ -246,12 +248,6 @@ nav a {display:inline-block; text-decoration:none; padding:4px; color:#444; lett
 		<section class="main">
 			<div class="container" data-cms-content-wrapper="/_layouts/default.html">
 				<html lang="id">
-<head>
-<style>
-h1  { text-decoration: underline overline;
-    }
-</style>
-
 	<div class="page-header"> 
          <h1>Objek Wisata Jogja</h1>
 	</div>
@@ -275,9 +271,8 @@ h1  { text-decoration: underline overline;
 		<p>&nbsp;</p>
 		</div>
 </article>
-</head></html>
-			</div>
-		</section>
+                  <p>Photo Gallery</p>
+                  <widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fill-width" width="360" height="460" autoscale="on" adaptive="414"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
         
 			<section class="quote-section">
 				<p class="container editable" data-cms-source="/objek-wisata-jogja/index.html" data-cms-index="1">
